# docker-autocompose

./: Dockerfile  Pipfile  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  codespell.yml  docker.yml  linter.yml  scorecard.yml
